# CS3203-SPA

./: .gitignore  CONTRIBUTING.md  README.md
Team10/Code10/: CMakeLists.txt  CMakeSettings.json
Team10/Code10/cmake/: CompilerSettings.cmake  Findautotester.cmake  PreventInSourceBuilds.cmake
Team10/Code10/docs/UML/: system-class-diagram.puml
Team10/Code10/docs/UML/PKB/: class-diagram-entity-manager.puml  class-diagram-facades.puml  class-diagram-overview.puml  class-diagram-pattern-manager..puml  class-diagram-relationship-manager.puml  class-diagram-two-way-map-manager.puml  read-facade-sequence-diagram.puml  write-facade-sequence-diagram.puml
Team10/Code10/docs/UML/QPS/: qps-class-diagram.puml  qps-evaluator-class-diagram.puml  qps-optimizer-class-diagram.puml  qps-parser-class-diagram.puml  qps-result-class-diagram.puml  qps-sequence-diagram.puml  qps-strategy-class-diagram.puml  qps-tokenizer-class-diagram.puml  qps-validator-class-diagram.puml
Team10/Code10/docs/UML/SP/: class-diagram.puml  design-extractor-class-diagram.puml  parser-class-diagram.puml  sequence-diagram.puml  tokenizer-class-diagram.puml
Team10/Code10/src/autotester/src/: AbstractWrapper.h  TestWrapper.cpp  TestWrapper.h
Team10/Code10/src/autotester_gui/src/: mainwindow.cpp
Team10/Code10/src/integration_testing/: CMakeLists.txt
Team10/Code10/src/integration_testing/src/QPS/: EvaluatorReadFacade_Affects.test.cpp  EvaluatorReadFacade_Calls.test.cpp  EvaluatorReadFacade_Follows.test.cpp  EvaluatorReadFacade_IfPattern.test.cpp  EvaluatorReadFacade_Modifies.test.cpp  EvaluatorReadFacade_Next.test.cpp  EvaluatorReadFacade_Parent.test.cpp  EvaluatorReadFacade_Uses.test.cpp  EvaluatorReadFacade_WhilePattern.test.cpp  EvaluatorReadFacade_With.test.cpp  TokenizerValidatorParser.test.cpp
Team10/Code10/src/integration_testing/src/QPS/fixtures/: Strategies.h  TestUtil.cpp  TestUtil.h  ValidQueries.h
Team10/Code10/src/integration_testing/src/SP/: DesignExtractorWriteFacade.cpp  ParserDesignExtractor.cpp  TokenizerParser.test.cpp
Team10/Code10/src/spa/: CMakeLists.txt
Team10/Code10/src/spa/PKB/: CMakeLists.txt
Team10/Code10/src/spa/PKB/include/: PKB.h  PKBUtil.h  ReadFacade.h  ReadFacadeStub.h  TwoWayMapManager.h  WriteFacade.h  WriteFacadeStub.h
Team10/Code10/src/spa/PKB/include/entity_manager/: EntityManager.h  EntitySetStore.h  StatementStore.h
Team10/Code10/src/spa/PKB/include/pattern_manager/: AssignExpPatternStore.h  PatternManager.h
Team10/Code10/src/spa/PKB/include/relationship_manager/: CallStarStore.h  RelationshipManager.h
Team10/Code10/src/spa/PKB/src/: PKB.cpp  ReadFacade.cpp  TwoWayMapManager.cpp  WriteFacade.cpp
Team10/Code10/src/spa/PKB/src/entity_manager/: EntityManager.cpp  EntitySetStore.cpp  StatementStore.cpp
Team10/Code10/src/spa/PKB/src/pattern_manager/: AssignExpPatternStore.cpp  PatternManager.cpp
Team10/Code10/src/spa/PKB/src/relationship_manager/: CallStarStore.cpp  RelationshipManager.cpp
Team10/Code10/src/spa/QPS/: CMakeLists.txt
Team10/Code10/src/spa/QPS/include/: QPS.h
Team10/Code10/src/spa/QPS/include/cache/: Cache.h  HashCombiner.h  SuchThatArgTupleHasher.h  WithArgTupleEqual.h  WithArgTupleHasher.h
Team10/Code10/src/spa/QPS/include/evaluator/: Evaluator.h
Team10/Code10/src/spa/QPS/include/exception/: GrammarRule.h  NonGrammarRule.h  SemanticError.h  SyntaxError.h
Team10/Code10/src/spa/QPS/include/optimizer/: GroupDivider.h  GroupSorter.h  Optimizer.h  StrategySorter.h  WithOptimizer.h
Team10/Code10/src/spa/QPS/include/parser/: DeclarationParser.h  EntEntParser.h  Parser.h  ParserUtil.h  PatternParser.h  SelectParser.h  StmtEntParser.h  StmtStmtParser.h  WithParser.h
Team10/Code10/src/spa/QPS/include/result/: Result.h
Team10/Code10/src/spa/QPS/include/strategy/: BooleanSelectStrategy.h  PriorityScore.h  Strategy.h  TupleSelectStrategy.h  WithStrategy.h
Team10/Code10/src/spa/QPS/include/tokenizer/: AttrNameTokenCreator.h  IntegerTokenCreator.h  NameTokenCreator.h  SymbolTokenCreator.h  Token.h  TokenCreator.h  TokenType.h  Tokenizer.h  WhitespaceTokenCreator.h
Team10/Code10/src/spa/QPS/include/validator/: IValidator.h  Validator.h
Team10/Code10/src/spa/QPS/src/: QPS.cpp
Team10/Code10/src/spa/QPS/src/cache/: Cache.cpp  SuchThatArgTupleHasher.cpp  WithArgTupleEqual.cpp  WithArgTupleHasher.cpp
Team10/Code10/src/spa/QPS/src/evaluator/: Evaluator.cpp
Team10/Code10/src/spa/QPS/src/exception/: GrammarRule.cpp  NonGrammarRule.cpp
Team10/Code10/src/spa/QPS/src/optimizer/: GroupDivider.cpp  GroupSorter.cpp  Optimizer.cpp  StrategySorter.cpp  WithOptimizer.cpp
Team10/Code10/src/spa/QPS/src/parser/: DeclarationParser.cpp  EntEntParser.cpp  Parser.cpp  ParserUtil.cpp  PatternParser.cpp  SelectParser.cpp  StmtEntParser.cpp  StmtStmtParser.cpp  WithParser.cpp
Team10/Code10/src/spa/SP/: CMakeLists.txt
Team10/Code10/src/spa/SP/include/: SP.h
Team10/Code10/src/spa/SP/src/: SP.cpp
Team10/Code10/src/spa/common/: CMakeLists.txt
Team10/Code10/src/spa/common/include/: FileReader.h  StatementType.h  StringHandler.h
Team10/Code10/src/spa/common/src/: FileReader.cpp  StringHandler.cpp
Team10/Code10/src/unit_testing/: CMakeLists.txt
Team10/Code10/src/unit_testing/src/PKB/: facade.test.cpp  pkb.test.cpp
Team10/Code10/src/unit_testing/src/SP/: SP.test.cpp
Team10/Code10/src/unit_testing/src/common/: FileReader.test.cpp
(+412 files in other folders)
